--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web-alchemy/web-compressor",
-  "version": "2.2.4-beta.0",
+  "version": "2.3.0",
   "author": {
     "name": "monochromer",
     "email": "monochromer@mail.ru"
